--- a/test1/template/booktest/list.html
+++ b/test1/template/booktest/list.html
@@ -3,16 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>图书列表</title>
+    {%load static from staticfiles %}
+    {#<link rel="stylesheet" href="/static/css/main.css">#}
+    <link rel="stylesheet" href="{% static '/css/main.css'%}">
 </head>
 <body>
-    <ul>
+    <div class="static">
+        <ul>
         {% for book in booklist %}
-            <li><a href="/booktest/detail/{{book.id}}/">{{book.btitle}}</a></li>
+            {#<li><a href="/booktest/detail/{{book.id}}/">{{book.btitle}}</a></li>#}
+            {#去除硬编码#}
+            <li>
+                <a href="{% url 'booktest:detail' book.id %}">{{book.btitle}}</a>
+                <a href="{% url 'booktest:delete' book.id %}">删除</a>
+
+            </li>
         {% empty %}
             <h3>没有书籍信息</h3>
         {% endfor %}
-    </ul>
-
-    <
+        </ul>
+    </div>
 </body>
 </html>
